[gd_scene load_steps=11 format=2]

[ext_resource path="res://Blocks/Block.tscn" type="PackedScene" id=2]
[ext_resource path="res://Blocks/BlockSpawner.gd" type="Script" id=3]
[ext_resource path="res://Game/GameArea.gd" type="Script" id=4]
[ext_resource path="res://Ball/Ball.tscn" type="PackedScene" id=5]
[ext_resource path="res://Ball/Ball_PhysicsMaterial.tres" type="PhysicsMaterial" id=7]
[ext_resource path="res://Player/Player.tscn" type="PackedScene" id=8]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 800, 10 )

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 10, 400 )

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 2716.02, 1233.25 )

[sub_resource type="RectangleShape2D" id=4]
extents = Vector2( 1636.85, 1800.17 )

[node name="GameArea" type="Node2D"]
script = ExtResource( 4 )

[node name="Player" parent="." instance=ExtResource( 8 )]
position = Vector2( 640, 655 )
ceiling = 100
sub_amount = 0
speed = 550

[node name="Ball" parent="." instance=ExtResource( 5 )]
position = Vector2( 640, 450 )
physics_material_override = ExtResource( 7 )
gravity_scale = 0.0
linear_damp = 0.0
max_speed = 700

[node name="Bounds" type="RigidBody2D" parent="."]
mode = 1
gravity_scale = 0.0

[node name="Ceiling" type="CollisionShape2D" parent="Bounds"]
position = Vector2( 640, 2.333 )
shape = SubResource( 1 )

[node name="RightWall" type="CollisionShape2D" parent="Bounds"]
position = Vector2( 1280, 360 )
rotation = -0.00872665
shape = SubResource( 2 )

[node name="LeftWall" type="CollisionShape2D" parent="Bounds"]
position = Vector2( 0, 358.568 )
rotation = 0.00872665
shape = SubResource( 2 )

[node name="DeathBox" type="Area2D" parent="."]
gravity = 0.0

[node name="Bottom" type="CollisionShape2D" parent="DeathBox"]
position = Vector2( 640, 2000 )
shape = SubResource( 3 )

[node name="Top" type="CollisionShape2D" parent="DeathBox"]
position = Vector2( 547.946, -1252.57 )
shape = SubResource( 3 )

[node name="Left" type="CollisionShape2D" parent="DeathBox"]
position = Vector2( -1660.47, 517.874 )
shape = SubResource( 4 )

[node name="Right" type="CollisionShape2D" parent="DeathBox"]
position = Vector2( 2936.25, 411.593 )
shape = SubResource( 4 )

[node name="Board" type="Node2D" parent="."]
script = ExtResource( 3 )
top_padding = 0
ball_path = NodePath("../Ball")

[node name="Block" parent="Board" instance=ExtResource( 2 )]
position = Vector2( 640, 330 )
[connection signal="reset" from="." to="Board" method="_on_GameArea_reset"]
[connection signal="reset" from="." to="Ball" method="_on_GameArea_reset"]
[connection signal="reset" from="." to="Player" method="_on_GameArea_reset"]
[connection signal="stop" from="." to="Ball" method="_on_GameArea_stop"]
[connection signal="ball_hit_player" from="Player" to="." method="_on_Player_ball_hit_player"]
[connection signal="launched" from="Ball" to="." method="_on_Ball_launched"]
[connection signal="lost" from="Ball" to="." method="_on_Ball_lost"]
[connection signal="body_entered" from="DeathBox" to="Ball" method="_on_DeathBox_body_entered"]
[connection signal="all_blocks_destroyed" from="Board" to="." method="_on_Board_all_blocks_destroyed"]
[connection signal="block_destroyed" from="Board" to="." method="_on_Board_block_destroyed"]
